[package]
name = "post_config"
version = "0.1.0"
edition = "2021"
authors = ["Sicheng he <hesicheng20@gmail.com>"]
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
eframe = "0.24.0"
rfd = "0.13.0"
# native-dialog = "0.7.0"
log = "0.4"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
